--- a/_pc.scss
+++ b/_pc.scss
@@ -87,7 +87,7 @@
     {
       width: 100vw;
       height: 768px;
-      background-image: url("../image/top-image-pc.png");
+      background-image: url("image/top-image-pc.png");
       background-size: 100%;
       background-position: 0% 0%;
       background-repeat: no-repeat;
