--- a/_ipad.scss
+++ b/_ipad.scss
@@ -99,7 +99,7 @@
     .hero
     {
       height: 1023px;
-      background-image: url(image/top-image@2x.png);
+      background-image: url("image/top-image@2x.png");
       background-size: 100%;
       background-position: 86% 0%;
     }
