--- a/style.css
+++ b/style.css
@@ -306,7 +306,8 @@ html {
 .back-design01 {
   position: relative;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 10000;}
   .back-design01 img {
     position: absolute;
     top: 0;
