--- a/style.css
+++ b/style.css
@@ -97,7 +97,8 @@ html {
   font-family: "Sawarabi Gothic";
   scroll-behavior: smooth;
   scroll-padding-top: 56px;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  overflow-x: hidden; }
 
 .header {
   width: 100%;
