--- a/style.css
+++ b/style.css
@@ -1097,7 +1097,7 @@ textarea::placeholder {
 
   .back-design01 img {
     position: absolute;
-    right: 17px;
+    right: 25px; }
   .back-design01 p {
     width: 289px;
     height: 237px;
@@ -1121,7 +1121,7 @@ textarea::placeholder {
           position: absolute;
           top: 0;
           right: 0;
-          z-index: 17px; }
+          z-index: 25px; }
 }
   /* works ************************************/
   .works {
@@ -1169,7 +1169,7 @@ textarea::placeholder {
   .back-design04 img {
     position: absolute;
     bottom: -16px;
-    right: 10px;
+    right: 25px;
     z-index: 10; }
 
   .w-1, .w-2, .w-3 {
