--- a/style.css
+++ b/style.css
@@ -1168,7 +1168,7 @@ textarea::placeholder {
 
   .back-design04 img {
     position: absolute;
-    bottom: 0;
+    bottom: -20px;
     right: 17px;
     z-index: 10; }
 
