--- a/style.css
+++ b/style.css
@@ -1097,7 +1097,7 @@ textarea::placeholder {
 
   .back-design01 img {
     position: absolute;
-    right: 17px; }
+    right: 0; }
   .back-design01 p {
     width: 289px;
     height: 237px;
