--- a/style.css
+++ b/style.css
@@ -1133,7 +1133,10 @@ textarea::placeholder {
   .back-design-title p {
     width: 768px;
     height: 237px;
-    font: 120px/237px Bad Script; }
+    font: 120px/237px Bad Script;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%); }
 
   .works-title {
     font: normal normal normal 32px/45px Sawarabi Gothic; }
