--- a/style.css
+++ b/style.css
@@ -1130,7 +1130,7 @@ textarea::placeholder {
   .works {
     height: 1791px; }
 
-  .back-design-title p {
+  .back-design-title {
     width: 768px;
     height: 237px;
     font: 120px/237px Bad Script;
