--- a/style.css
+++ b/style.css
@@ -395,20 +395,25 @@ html {
     left: 0;
     z-index: -1; }
 
-.back-design-title {
+.back-design-title
+{
   position: relative;
   top: 0;
-  left: 0; }
-  .back-design-title p {
-    width: 375px;
-    height: 197px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
-    font: normal normal normal 100px/197px Bad Script;
-    color: #F6F3EB;
-    text-align: center; }
+  left: 0;
+      & p
+      {
+          width: 224px;
+          height: 197px;
+          position: absolute;
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          z-index: 1;
+          font: 100px/197px Bad Script;
+          color: #F6F3EB;
+          text-align: center;
+      }
+}
 
 .back-design-title-skill {
   position: relative;
@@ -1130,13 +1135,13 @@ textarea::placeholder {
   .works {
     height: 1791px; }
 
-  .back-design-title {
-    width: 270px;
-    height: 237px;
-    font: 120px/237px Bad Script;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%); }
+  .back-design-title p
+    {
+        width: 100%;
+        height: 237px;
+        font: 120px/237px Bad Script;
+        text-align: center;
+    }
 
 
   .works-title {
