--- a/style.css
+++ b/style.css
@@ -591,7 +591,7 @@ html {
   height: 1838px;
   background: #F9F9F9; }
 .back-design-title {
-  position: relative;
+  position: absolute;
       left: 50%;
       transform: translateX(-50%); }
 .works-hedding {
