--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ html {
   z-index: 1;
   width: 100vw;
   height: 667px;
-  background-image: url("../image/top-image.png");
+  background-image: url("image/top-image.png");
   background-size: 100%;
   background-position: 46% 50%;
   background-repeat: no-repeat; }
@@ -983,7 +983,7 @@ textarea::placeholder {
   /* hero ************************************/
   .hero {
     height: 1023px;
-    background-image: url("../image/top-image@2x.png");
+    background-image: url("image/top-image@2x.png");
     background-size: 100%;
     background-position: 86% 0%; }
 
@@ -1320,7 +1320,7 @@ textarea::placeholder {
   .hero {
     width: 100vw;
     height: 768px;
-    background-image: url("../image/top-image-pc.png");
+    background-image: url("image/top-image-pc.png");
     background-size: 100%;
     background-position: 0% 0%;
     background-repeat: no-repeat; }
