--- a/style.css
+++ b/style.css
@@ -107,7 +107,8 @@ html {
   z-index: 11000;
   display: flex;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.9); }
+  background-color: rgba(255, 255, 255, 0.9);
+  overflow-y: hidden; }
 
 .page-title h1 {
   display: inline-block;
