--- a/style.css
+++ b/style.css
@@ -1613,6 +1613,7 @@ textarea::placeholder {
     -ms-grid-column-span: 1;
     grid-column: 1 / 2;
     width: 124px;
+    margin-right: 40px;
   }
   .li-2 {
     -ms-grid-row: 3;
