--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ html {
   z-index: 1;
   width: 100vw;
   height: 667px;
-  background-image: url("../image/top-image.png");
+  background-image: url("image/top-image.png");
   background-size: 100%;
   background-position: 46% 50%;
   background-repeat: no-repeat;
@@ -1290,7 +1290,7 @@ textarea::placeholder {
   /* hero ************************************/
   .hero {
     height: 1023px;
-    background-image: url("../image/top-image@2x.png");
+    background-image: url("image/top-image@2x.png");
     background-size: 100%;
     background-position: 86% 0%;
   }
@@ -1721,7 +1721,7 @@ textarea::placeholder {
   .hero {
     width: 100vw;
     height: 768px;
-    background-image: url("../image/top-image-pc.png");
+    background-image: url("image/top-image-pc.png");
     background-size: 100%;
     background-position: 0% 0%;
     background-repeat: no-repeat;
