--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ input, select {
 /* @mixin *********************************/
 /* header *********************************/
 html {
-  width: 374px;
+  width: 375px;
   height: 62.5%;
   font-family: "Sawarabi Gothic";
   scroll-behavior: smooth;
@@ -118,7 +118,7 @@ html {
 }
 
 .header {
-  width: 100vw;
+  width: 375px;
   height: 5.6em;
   position: fixed;
   z-index: 11000;
@@ -207,11 +207,11 @@ html {
 }
 
 /* ﾊﾝﾊﾞｰｶﾞｰﾒﾆｭｰ ***************************/
-@media (max-width: 374px) {
+@media (max-width: 375px) {
   .header-cover {
     display: none;
     height: 100vh;
-    width: 100vw;
+    width: 375px;
     position: absolute;
     top: 0;
     right: 0;
@@ -1178,13 +1178,14 @@ textarea::placeholder {
           transform: translateX(-50%);
 }
 
-@media (min-width: 375px) {
+@media (min-width: 376px) {
   html {
     width: 768px;
     scroll-padding-top: 80px;
   }
   /* header **********************************/
   .header {
+    width: 100%;
     height: 80px;
     background-color: rgba(255, 255, 255, 0.9);
   }
@@ -1573,12 +1574,13 @@ textarea::placeholder {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   html {
     width: 100%;
   }
   /* header **********************************/
   .header {
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
