--- a/style.css
+++ b/style.css
@@ -130,7 +130,9 @@ html {
           justify-content: space-between;
   background-color: rgba(255, 255, 255, 0.9);
 }
-
+.nav-font-SG{
+    padding: 0;
+  }
 .page-title h1 {
   display: inline-block;
   text-align: left;
